# DyrBot

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: BasicSocketInterface.hpp  BotFactory.hpp  BotManager.hpp  ConnectionManager.hpp  DyrBot.hpp  DyrBotErrors.hpp  Identifier.hpp  Logger.hpp  Parser.hpp  PrivmsgCommand.hpp  SyncSocketInterface.hpp  UniqueIdentifier.hpp  message_struct.hpp  privmsg_struct.hpp
src/: ConnectionManager.cpp  ConnectionManager.hpp  DyrBot.cpp  DyrBot.hpp  main.cpp
src/BotManager/: BotFactory.cpp  BotManager.cpp
src/ConnectionManager/: ConnectionManager.cpp
src/DyrBot/: DyrBot.cpp
src/ID/: Identifier.cpp
src/Logger/: Logger.cpp
src/Parser/: Parser.cpp
src/UUID/: UniqueIdentifier.cpp
src/error/: error_logger.cpp  error_logger.hpp
src/modules/: module.cpp  module.hpp
src/modules/custodian/: commands.cpp  commands.hpp
src/parsers/: message_parser.cpp  message_parser.hpp  parsers.hpp  privmsg_parse.cpp  privmsg_parser.hpp
src/structs/: message_struct.hpp  privmsg_struct.hpp
